fix: appointment route
